@@ -30,6 +30,7 @@ Changes in Go4 v5.1.x (April 2016)
    version like go4analysis -random -jsroot http://jsroot.gsi.de/latest/
 4. Fix problem with ROOT6 - it requires exact location of go4 include files
    when running GUI or analysis. Especially important when doing "make install" 
+5. Preserve frame position in the hotsart, do not reset frame with every update.
 
 
 Changes in Go4 v5.1.0 (March 2016)
